--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,4 +2,17 @@
 
 <h2><%= @user.name %></h2>
 
+<section id="summary"></section> 
+
+<section id="buildings">
+  <div class="floors-progress">
+    <div class="building"></div>
+    <div class="building-mask"></div>
+    <div class="building-bar"></div>
+</div>
+</section>
+
+<section id="walks"></section>
+
+
 <%= link_to 'Back', users_path %>
