--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h2><%= @user.name %></h2>
+<!-- <h2><%= @user.name %></h2> -->
+<h2><%= @info %> </h2> 
 
 <%= link_to 'Back', users_path %>
