--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,10 @@
 <!-- <h2><%= @user.name %></h2> -->
 <h2><%= @info %> </h2>
 
+<button id='get-data-day'>day</button>
+<button id='get-data-week'>week</button>
+<button id='get-data-month'>month</button>
+
 <section id="summary"></section> 
 
 <section id="buildings">
