adding js to render and animate one building, maybe more

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,9 +11,9 @@
 
 <section id="buildings">
   <div class="floors-progress">
-    <div class="building"></div>
+<!--     <div class="building"></div>
     <div class="building-mask"></div>
-    <div class="building-bar"></div>
+    <div class="building-bar"></div> -->
 </div>
 </section>
 
