fixed building positioning

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,11 +10,11 @@
 <section id="summary"></section> 
 
 <section id="buildings">
-  <div class="floors-progress">
+<!--   <div class="floors-progress"> -->
 <!--     <div class="building"></div>
     <div class="building-mask"></div>
     <div class="building-bar"></div> -->
-</div>
+<!-- </div> -->
 </section>
 
 <section id="walks"></section>
