--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<!-- <h2><%= @user.name %></h2> -->
+<h2><%= @user.name %></h2>
 <h2><%= @fitbit_info %> </h2>
 
 <button id='get-data-day'>day</button>
@@ -9,15 +9,9 @@
 
 <section id="summary"></section> 
 
-<section id="buildings">
-<!--   <div class="floors-progress"> -->
-<!--     <div class="building"></div>
-    <div class="building-mask"></div>
-    <div class="building-bar"></div> -->
-<!-- </div> -->
-</section>
+<section id="buildings"></section>
 
 <section id="walks"></section>
 
 
-<%= link_to 'Back', users_path %>
+<!--<%= link_to 'Back', users_path %>-->
