--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,11 +7,11 @@
 <button id='get-data-week'>week</button>
 <button id='get-data-month'>month</button>
 
-<section id="summary"></section> 
+<div id="summary"></div> 
 
-<section id="buildings"></section>
+<div id="buildings"></div>
 
-<section id="walks"></section>
+<div id="walks"></div>
 
 
 <!--<%= link_to 'Back', users_path %>-->
