added bcrypt auth

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,6 +10,14 @@
       </ul>
     </div>
   <% end %>
+  <%= f.label :name %><br>
+  <%= f.text_field :name %><br>
+  <%= f.label :email %><br>
+  <%= f.email_field :email %><br>
+  <%= f.label :password %><br>
+  <%= f.password_field :password %><br>
+  <%= f.label :password_confirmation %><br>
+  <%= f.password_field :password_confirmation %>
 
   <div class="actions">
     <%= f.submit %>
