--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,14 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <%= link_to "all users", users_path %>
+  <% if current_user %>
+    <%= link_to current_user.name, current_user %>
+    <%= link_to "log out", logout_path%>
+  <% else %>
+    <%= link_to "log in", login_path %>
+    <%= link_to "sign up", signup_path %>
+  <% end %>
 
 <%= yield %>
 
