added text to user dashboard

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,6 +2,11 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#buildings-text {
+  position: relative;
+  top: 550px;
+}
+
 #buildings {
   width: 600px;
   margin: 0 auto;
