--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,11 +12,18 @@
 <button id='get-data-week'>week</button>
 <button id='get-data-month'>month</button>
 
-<div id="summary"></div> 
+<div id="alerts"></div>
 
+<div id="walks-text"></div>
+<div id="walks"></div>
+
+<div id="buildings-text"></div>
 <div id="buildings"></div>
 
-<div id="walks"></div>
+<div id="wine-text"></div>
+<div id="wine"></div>
+
+
 
 
 <!--<%= link_to 'Back', users_path %>-->
