Added Bootstrap Gem to rails/bootstrap is up and running

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -12,3 +12,6 @@
   }
 }
 
+body{
+	background-image: url("http://hdwallpapersfit.com/wp-content/uploads/2015/02/new-york-skyline-wallpapers-city-hdr.jpg");
+}
