--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,6 @@
 <p id="notice"><%= notice %></p>
 
+<img src="<%=@user.avatar%>">
 <% if current_user == @user %>
   <h2>Welcome, <%= @user.name %>!</h2>
 <% else %>
