--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
     <%= csrf_meta_tags %>
   </head>
   <body>
-    <%= link_to "all users", users_path %>
+    <%= link_to "leaderboard", users_path %>
     <% if current_user %>
       <%= link_to current_user.name, current_user %>
       <%= link_to "log out", logout_path%>
