--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -2,18 +2,82 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.avatar {
+  width: 100px;
+  border-radius: 100px;
+  padding: 10px;
+  border: 1px solid black;
+}
+
+ul.dashboard-head {
+  padding-left: 0;
+  list-style: none;
+}
+
+.dashboard-head li,
+.dashboard-head img {
+  display: inline-block;
+  padding: 10px;
+  font-family: 'Oswald', sans-serif;
+  font-size: 30px;
+}
+
+.button {
+  background: none;
+  color: black;
+  font-family: 'Oswald', sans-serif;
+  font-size: 24px;
+  padding: 10px;
+  border-radius: 40px;
+  border: 4px solid #2c2c2e;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:hover {
+  background: #2c2c2e;
+  color: white;
+  border: 4px solid #2c2c2e;
+}
+
+.dashboard-section {
+  width: 80%;
+  margin: 0 auto;
+}
+
+.dashboard-section p {
+  font-size: 36px;
+  margin-bottom: 20px;
+}
+
 #buildings-text {
-  position: relative;
-  top: 550px;
+  margin-top: 60px;
+  
+}
+
+/*#buildings {
+  width: 600px;
+  margin: 0 auto;
+  }*/
+
+#walks {
+  background-color: #05A9F4;
+  height: 500px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
 }
 
 #buildings {
-  width: 600px;
-  margin: 0 auto;
-  }
+  background-color: #A3D523;
+  height: 550px;
+  border-top-left-radius: 50px;
+  border-top-right-radius: 50px;
+}
 
 .floors-progress {
-  position: absolute;
+  position: relative;
   float: left;
   height: 460px;
   width: 144px;
@@ -25,7 +89,7 @@
 
 .building {
   position: absolute;
-  z-index: -1;
+  z-index: 0;
   height: 100%;
   width: 100%;
   bottom: 0px;
@@ -37,7 +101,7 @@
 
 .building-mask {
   position: absolute;
-  z-index: 1;
+  z-index: 2;
   height: 100%;
   width: 100%;
   bottom: -1px;
@@ -49,7 +113,7 @@
 
 .building-bar {
   position: absolute;
-  z-index: 0;
+  z-index: 1;
   height: 0%;
   width: 100%;
   bottom: 0px;
@@ -65,11 +129,12 @@ img.spinner {
 }
 
 .miles-progress {
-  position: absolute;
+  position: relative;
+  float: left;
   height: 460px;
   width: 212px;
-  left: 200px;
-  margin: 0;
+  /*left: 200px;*/
+  margin: 40px 20px;
 }
 
 .walk {
@@ -105,3 +170,4 @@ img.spinner {
   background: red;
   opacity: 0.55;
 }
+
