--- a/app/assets/stylesheets/users.scss.erb
+++ b/app/assets/stylesheets/users.scss.erb
@@ -80,7 +80,7 @@ ul.dashboard-head {
   width: 100%;
   bottom: -1px;
   left: 0px;
-  background-image: url('manhattan-blue.png');
+  background-image: url(<%= asset_path('manhattan-blue.png') %>);
   background-position: 50% 50%;
   background-size: cover;
 }
@@ -138,7 +138,7 @@ ul.dashboard-head {
   width: 100%;
   bottom: 0px;
   left: 0px;
-  background-image: url(/assets/ESB-no-bg.png);
+  background-image: url(<%= asset_path('ESB-no-bg.png') %>);
   background-position: 50% 50%;
   background-size: cover;
 }
@@ -150,7 +150,7 @@ ul.dashboard-head {
   width: 100%;
   bottom: -1px;
   left: 0px;
-  background-image: url(ESB-mask-green.png);
+  background-image: url(<%= asset_path('ESB-mask-green.png') %>);
   background-position: 50% 50%;
   background-size: cover;
 }
