--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,31 @@
     <link href='https://fonts.googleapis.com/css?family=Wire+One|Oswald' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <%= link_to "leaderboard", users_path %>
-    <% if current_user %>
-      <%= link_to current_user.name, current_user %>
-      <%= link_to "log out", logout_path%>
-    <% else %>
-      <%= link_to "log in", login_path %>
-      <%= link_to "sign up", signup_path %>
-    <% end %>
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+      <!-- Optional theme -->
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+      <!-- Latest compiled and minified JavaScript -->
+      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active">
+    <% if current_user %>
+    <%= link_to current_user.name, current_user %> 
+  </li>
+  <li role="presentation" class="active">
+   <%= link_to "leaderboard", users_path %>
+  </li>
+  <li role="presentation">
+    <%= link_to "log out", logout_path%> 
+    <% else %>
+    <%= link_to "log in", login_path %>
+    <%= link_to "sign up", signup_path %>
+    <% end %> 
+  </li>
+    <p id="notice"><%= notice %></p>
+</ul>
+
+    
   <%= yield %>
 
   </body>
