added twitter share buttons for current user dashboard

--- a/app/assets/stylesheets/users.scss.erb
+++ b/app/assets/stylesheets/users.scss.erb
@@ -42,6 +42,16 @@ ul.dashboard-head {
   border: 4px solid #2c2c2e;
 }
 
+ul.share-buttons {
+  margin-left: 10%;
+  list-style: none;
+}
+
+.share-buttons li {
+  display: inline-block;
+  margin-right: 20px;
+}
+
 .dashboard-section {
   width: 80%;
   margin: 0 auto;
@@ -108,8 +118,8 @@ ul.dashboard-head {
 }
 
 
-#buildings-text {
-  margin-top: 40px;
+#walks {
+  margin-bottom: 40px;
 }
 
 #buildings {
