--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,16 +14,19 @@
       <!-- Latest compiled and minified JavaScript -->
       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 
-<ul class="nav nav-tabs">
-  <li role="presentation" class="active">
+<!-- <ul class="nav nav-tabs"> -->
+  
+  <nav class="navbar navbar-left">
+    <ul class="nav nav-tabs">
+  <li role="presentation" >
     <% if current_user %>
     <%= link_to current_user.name, current_user %> 
   </li>
-  <li role="presentation" class="active">
-   <%= link_to "leaderboard", users_path %>
+  <li role="presentation" >
+   <%= link_to "Leaderboard", users_path %>
   </li>
-  <li role="presentation">
-    <%= link_to "log out", logout_path%> 
+  <li role="presentation" >
+    <%= link_to "Log Out", logout_path%> 
     <% else %>
     <%= link_to "log in", login_path %>
     <%= link_to "sign up", signup_path %>
@@ -31,7 +34,7 @@
   </li>
     <p id="notice"><%= notice %></p>
 </ul>
-
+</nav>
     
   <%= yield %>
 
