--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -10,10 +10,12 @@
 
 <body>
 <p id="notice"><%=notice %></p>
-<h1>Leaderboard</h1>
+</br></br>
+
   <div class="container">
     <div class="row">
-
+     <h1>Leaderboards</h1>
+    
     <div class="col-md-3">
     <h2>Welcome, <%= current_user.name %>!</h2>
     <img class='avatar' src="<%=current_user.avatar%>">
