--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -96,10 +96,11 @@
       <tr>
         <% if user == current_user %>
           <td><b> <%= link_to (user.name), user %> </b></td>
-          <td><b><%= user.activity_totals(7)[:calories].to_i %></b></td>
+          <!-- number_with_delimiter Rails helper to put comma in 1,000s -->
+          <td><b><%= number_with_delimiter(user.activity_totals(7)[:calories].to_i, :delimiter => ',') %></b></td>
         <% else %>
           <td><%= link_to (user.name), user %></td>
-          <td><%= user.activity_totals(7)[:calories].to_i %> </td>
+          <td><%= number_with_delimiter(user.activity_totals(7)[:calories].to_i, :delimiter => ',') %> </td>
         <% end %>
       </tr>
     <% end %>
