BootStrapped version 2.0 leaderboard page

--- a/app/assets/stylesheets/users.scss.erb
+++ b/app/assets/stylesheets/users.scss.erb
@@ -220,6 +220,82 @@ img.spinner {
 
 .leader {
   position: center;
+
 }
+
+#leaderboard {
+  background-image: url("https://lh3.googleusercontent.com/-eiJlaQKhe6c/VQdZN1VwULI/AAAAAAAAAQk/29OfqzKfBVw/w1916-h1278-no/landing%2Bpage%2Bbkgnd.png");
+  background-size: cover;
+  color: #efefef;
+  font-family: oswald;
+
+}
+
+#floors {
+  text-align: center;
+  background-color: rgba(0, 0, 0, .5);
+  border-radius: 20px;
+  border-style: solid;
+  border-color: white;
+  border-width: 2px;
+}
+
+#distance {
+  text-align: center;
+  background-color: rgba(0, 0, 0, .5);
+  border-radius: 20px;
+  border-style: solid;
+  border-color: white;
+  border-width: 2px;
+}
+
+#calories {
+  text-align: center;
+  background-color: rgba(0, 0, 0, .5);
+  border-radius: 20px;
+  border-style: solid;
+  border-color: white;
+  border-width: 2px;
+}
+
+#userleader {
+  padding-top: 20px;
+  background-color: rgba(233, 94, 103, .6);
+  text-align: center;
+  border-radius: 20px;
+  border-style: solid;
+  border-color: white;
+  border-width: 2px;
+  position: center;
+  height: 450px;
+}
+
+.leaderboard_title {
+  padding-left: 40px;
+  color: white;
+  font-family: oswald;
+}
+
+table {
+  margin-left:auto; 
+  margin-right:auto;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
