spacing changes made to dashboard front-end

--- a/app/assets/stylesheets/users.scss.erb
+++ b/app/assets/stylesheets/users.scss.erb
@@ -233,7 +233,7 @@ img.spinner {
 
 #floors {
   text-align: center;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .6);
   border-radius: 20px;
   border-style: solid;
   border-color: white;
@@ -242,7 +242,7 @@ img.spinner {
 
 #distance {
   text-align: center;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .6);
   border-radius: 20px;
   border-style: solid;
   border-color: white;
@@ -251,7 +251,7 @@ img.spinner {
 
 #calories {
   text-align: center;
-  background-color: rgba(0, 0, 0, .5);
+  background-color: rgba(0, 0, 0, .6);
   border-radius: 20px;
   border-style: solid;
   border-color: white;
@@ -279,7 +279,12 @@ img.spinner {
 table {
   margin-left:auto; 
   margin-right:auto;
+  font-size: 18px;
 }
+ td {
+  font-size: 16px;
+
+ }
 
 
 
